Revamping scraper using selenium, and moving the url to Kemenkes's site

--- a/covid19-id-api.service
+++ b/covid19-id-api.service
@@ -7,6 +7,8 @@ StartLimitIntervalSec=0
 
 [Service]
 WorkingDirectory=/root/covid19-id/
+StandardOutput=file:/var/log/covid19-id-api/std_logs.log
+StandardError=file:/var/log/covid19-id-api/err_logs.log
 Type=simple
 Restart=always
 RestartSec=1
